tests/expectations/compiler/interfaces/record_field_missing_fail.out
Error [ECHI03712012]: Record `Token` in program `test.aleo` is missing required field `amount` specified by interface `test.aleo/TokenInterface`.
    --> compiler-test:10:5
     |
   4 |           amount: u64,
     |           ^^^^^^^^^^^ required by interface here
   ...
  10 | /     record Token {
  11 | |         owner: address,
  12 | |     }
     | |_____- record is missing field `amount`
     |
     = Add the missing field with the exact type and mode specified in the interface.
